[package]
name = "jayce"
version = "9.0.1"
edition = "2021"
description = "jayce is a tokenizer 🌌"
repository = "https://github.com/AuracleTech/jayce"
license = "MIT"

[dependencies]
bytecount = "0.6.3"
lazy_static = "1.4.0"
regex = "1.8.4"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "initialization"
harness = false

[[bench]]
name = "tokenize"
harness = false

[features]
runtime-dispatch-simd = ["bytecount/runtime-dispatch-simd"]
generic-simd = ["bytecount/generic-simd"]
